# divvun-api

./: .dockerignore  .env_sample  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  config.toml  index.js  openapi.yml  package-lock.json  package.json
deployment/: Caddyfile  README.md  build_artifact.sh  config.toml  divvun-api.service  docker-compose.yml  install.sh  nginx-site.j2  playbook.yml  systemd-service.j2
docker/libdivvun/: Dockerfile
docs/: index.adoc  index.html  redoc-static.html
features/: api.feature  example.feature  watcher.feature
src/: config.rs  data_files.rs  error.rs  file_utils.rs  grammar.rs  init.rs  lib.rs  main.rs  query.rs  server.rs  speller.rs  state.rs  watcher.rs
src/graphql/: handlers.rs  mod.rs  schema.rs
src/language/: data_files.rs  grammar.rs  handlers.rs  hyphenation.rs  mod.rs  speller.rs
src/server/: mod.rs  state.rs
tests/: cucumber.rs
tests/steps/: api.rs  mod.rs  watcher.rs
