[package]
name = "divvun-api"
version = "0.2.0"
authors = [
    "Brendan Molloy <brendan@technocreatives.com>", 
    "Rostislav Raykov <rostislav@technocreatives.com>",
    "Eike Siewertsen <eike@technocreatives.com>",
    "projektir <oprojektir@gmail.com>",
]
build = "build.rs"
edition = "2018"

[build-dependencies]
csv = "1.1.1"
phf = { version = "0.7.24", features = ["macros"] }
phf_codegen = "0.7.24"
serde = { version = "1.0.99", features = ["derive"] }

[dependencies]
actix-web = "1.0.9"
actix-cors = "0.1.0"
actix = "0.8.3"
log = "0.4.11"
env_logger = "0.7.1"
juniper = "0.13.1"
serde = { version = "1.0.99", features = ["derive"] }
serde_json = "1.0.40"
divvunspell = { git = "https://github.com/divvun/divvunspell", branch="main", features=["compression"] }
futures = "0.1.28"
failure = "0.1.5"
hashbrown = "0.9.1"
toml = "0.5.7"
directories = "2.0.2"
regex = "1.4.0"
clap = "2.33.3"
notify = "4.0.15"
parking_lot = "0.11.0"
phf = "0.7.24"

[[test]]
name = "cucumber"
harness = false # Allows Cucumber to print output instead of libtest

[dev-dependencies]
cucumber_rust = { version = "0.6.1", default-features = false }
reqwest = "0.9.20"
